# rust-stm32l4-pandora

./: .gitignore  README.md
.github/workflows/: rust.yml
blinky/: Cargo.toml
blinky/src/: main.rs
i2c_icm/: Cargo.toml
i2c_icm/src/: main.rs
key/: Cargo.toml  elf2bin.sh
key/src/: main.rs
rgb/: Cargo.toml  memory.x
rgb/src/: main.rs
uart/: Cargo.toml
uart/.cargo/: config
uart/src/: main.rs
