[package]
name = "i2c_icm"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["guozhanxin <guozhanxin@rt-thread.com>"]


[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
nb = "1.0.0"

[dependencies.stm32l4xx-hal]
git = "https://github.com/stm32-rs/stm32l4xx-hal"
tag = "v0.7.1"
features = ["rt", "stm32l475"]


[profile.dev]
opt-level = 1
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations