[package]
name = "key"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["guozhanxin <guozhanxin@rt-thread.com>"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
stm32l4xx-hal = { version = "0.6.0", features = ["rt", "stm32l4x2"] }
nb = "1.0.0"

[profile.dev]
opt-level = 1
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations